--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -3,17 +3,16 @@
 }
 
 .grid{
+  margin: 0;
   width: 100%;
   height: 100%;
 }
 
 .my-centered{
   position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: auto;
+  left: 35%;
+  top: 20%;
 }
+
