--- a/src/app/content/index/index.component.html
+++ b/src/app/content/index/index.component.html
@@ -1,3 +1,1 @@
-<p>
-  index works!
-</p>
+<app-writer [elementId]="editor" (onEditorKeyUp)="EditorKeyUpHandler($event)" [text]="hithere"></app-writer>
