--- a/src/app/content/top-nav/top-nav.component.html
+++ b/src/app/content/top-nav/top-nav.component.html
@@ -18,8 +18,7 @@
       </a>
     </div>
     <div class="right menu">
-      <a class="item">Register</a>
-      <a class="item">Login</a>
+      <a class="item" (click)="onLogOutClicked()">Logout</a>
       <a class="item">Help</a>
     </div>
   </div>
